Fix overflow of stretched images in the SingleProductDetails component

--- a/public/style.css
+++ b/public/style.css
@@ -390,7 +390,9 @@ li:hover {
 }
 
 .single-product-image img {
-  width: 80%;
+  max-width: 80%;
+  max-height: 80%;
+  align-self: center;
   margin: 0 auto;
 }
 
